# ase-fleur

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
ase_fleur/: __init__.py  calculator.py  io.py
test-files/: ase_test.conf  out_magnetic.xml
tests/: conftest.py  test_calculator.py  test_io.py
